# laz-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  extract.py  test-many-compression.ps1  test-many-decompression.ps1
.github/workflows/: rust.yml
benches/: benchmark.rs
examples/: check.rs  check_compression.rs  check_decompression.rs  check_laszip.rs  decompress.rs  is_sym.rs  par_compression.rs  par_decompression.rs  wasm.html
src/: byteslice.rs  checking.rs  compressors.rs  decoders.rs  decompressors.rs  encoders.rs  errors.rs  formats.rs  lib.rs  models.rs  packers.rs  record.rs  test.rs
src/las/: extra_bytes.rs  file.rs  gps.rs  laszip.rs  mod.rs  nir.rs  point0.rs  point10.rs  point6.rs  pointtypes.rs  rgb.rs  rgbnir.rs  selective.rs  utils.rs  wavepacket.rs
src/las/laszip/: chunk_table.rs  compression.rs  decompression.rs  details.rs  mod.rs  parallel.rs  vlr.rs
src/laszip/: chunk_table.rs  compression.rs  decompression.rs  details.rs  mod.rs  vlr.rs
src/laszip/parallel/: appender.rs  compression.rs  decompression.rs  mod.rs
src/laszip/sequential/: appender.rs  compression.rs  decompression.rs  mod.rs
tests/: laszip.rs  laszip_version_1.rs  laszip_version_2.rs  test.rs  test_par.rs  test_point10.rs  variable_size_chunks.rs
tests/data/: point-color-time.laz  point-color.las  point-color.laz  point-time-color.las  point-time.las  point-time.laz  point-version-1-point-wise.las  point10.las  point10.laz
