[package]
name = "laz"
version = "0.5.2"
authors = ["tmontaigu <thomas.montaigu@laposte.net>"]
edition = "2018"
license-file = "COPYING"
repository = "https://github.com/tmontaigu/laz-rs"
readme = "README.md"
description = "Rust port of Laszip compression. of the LAS format"
exclude = [
    "tests/data",
]

[features]
parallel = ['rayon']

[dependencies]
num-traits = "0.2.12"
byteorder = "1.3.4"

rayon = { version = "1.2.0", optional = true }

[dev-dependencies]
criterion = "0.2"
glob = "0.3.0"
indicatif = "0.16.2"
clap = "3.0.0-beta.2"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
features = ["parallel"]
