[package]
name = "laz"
version = "0.9.3"
authors = ["tmontaigu <thomas.montaigu@laposte.net>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tmontaigu/laz-rs"
readme = "README.md"
description = "Rust port of Laszip compression. of the LAS format"
exclude = ["tests/data"]

[features]
default = []
parallel = ['rayon']

[dependencies]
num-traits = "0.2.14"
byteorder = "1.4.3"

rayon = { version = "1.2.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
glob = "0.3.0"
indicatif = "0.17.8"
clap = { version = "4.5.3", features = ["derive"] }

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
features = ["parallel"]
